# fact

./: .gitignore  CMakeLists.txt  Cargo.toml  grammar.md  schema.yaml
db/: computer-number-int.yaml  i32.yaml  int.yaml  num.yaml  number.yaml  planet-earth.yaml  planet.yaml  planet_earth.yaml  str.yaml  string.yaml  zero.yaml
db/comp/: int_num.yaml
db/math/: int_num.yaml
fact/: cpp-raw-string-facts.yml  facts.yml  facts.yml.in
facts-yml-db/: has.yml  is.yml  is_instance_of_type.yml  is_member_of_set.yml  physical_universe.yml  space.yml  the_physical_universe.yml  time.yml
kg/astronomy/: object.yaml  star.yaml  sun.yaml  universe.yaml
kg/computer/: specification.yaml
kg/computer/com/: flit.yaml
kg/computer/com/ualink/: accelerator_id.yaml  data_link_layer.yaml  host.yaml  host_acc_interconnect.yaml  lane.yaml  link.yaml  link_station.yaml  os_domain.yaml  physical_layer.yaml  pod.yaml  protocol_layer.yaml  protocol_level_interface.yaml  spec_v_1_0.yaml  stack_layers.yaml  switch.yaml  (+4 more)
kg/math/: function.yaml
kg/math/number/: integer.yaml
old/: CMakeLists.txt
old/fact/: cpp-raw-string-facts.yml
old/facts-yml-db/: physical_universe.yml
old/tools/fact-check-yml-db/: CMakeLists.txt
pysrc/: check.py  fact.py  kg.py
src/: display.rs  kg.rs  main.rs  schema.rs  schema.yaml
src/kg/: math.rs  num.rs  planet.yaml  str.rs  val.rs  val.yaml
src/kg/astronomy/: planet.yaml  planet_earth.yaml
src/kg/comp/: i32.yaml  int_num.rs  int_num.yaml
src/kg/math/: int_num.rs  int_num.yaml
tools/: CMakeLists.txt
tools/fact-check-yml-db/: main.cpp
(+2 files in other folders)
